2023CR785	9/8/2023	MikeR	Bug	Center align radio buttons for ref mult choice questions.

--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -114,3 +114,8 @@ body .ui-widget
     font-size:  1.2rem;
 }
 
+.ui-g-12, .ui-md-12
+{
+    padding:0 !important;
+}
+
